--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@octokit/plugin-retry": "^3.0.1",
     "@octokit/plugin-throttling": "^3.2.0",
     "@octokit/rest": "^17.0.0",
+    "Logger": "^0.0.0",
     "all-contributors-cli": "^6.14.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
